--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.23.1"
+    "@wordpress/block-editor": "^8.0.3",
+    "@wordpress/blocks": "^11.1.4",
+    "@wordpress/components": "^19.0.3",
+    "@wordpress/i18n": "^4.2.4",
+    "@wordpress/icons": "^6.1.1",
+    "cgb-scripts": "1.23.1",
+    "cuid": "^2.1.8",
+    "react-dom": "^17.0.2"
   }
 }
